force-app/main/default/objects/Daily_Update__c/Daily_Update__c.object-meta.xml
<CustomObject>
    <label>Daily Update</label>
    <nameField>
        <displayFormat>DU-{0000000}</displayFormat>
        <label>Daily Update</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>