force-app/main/default/objects/Daily_Update__c/fields/Blockers__c.field-meta.xml
<CustomField>
    <fullName>Blockers__c</fullName>
    <label>Blockers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>