force-app/main/default/objects/Daily_Update__c/fields/Expected_Billable_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Expected_Billable_Hrs__c</fullName>
    <label>Expected Billable Hrs</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>