force-app/main/default/objects/Daily_Update__c/fields/Is_Absent__c.field-meta.xml
<CustomField>
    <fullName>Is_Absent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if a team member attended meeting</description>
    <label>Is Absent</label>
    <type>Checkbox</type>
</CustomField>