force-app/main/default/objects/Daily_Update__c/fields/Reason_For_Absence__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Absence__c</fullName>
    <description>A list of reasons as to why a team member did not attend meeting</description>
    <label>Reason For Absence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Illness</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>No Reason Provided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>