force-app/main/default/objects/Daily_Update__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <formula>HYPERLINK(&apos;/lightning/r/Daily_Update__c/&apos; + Id + &apos;/view&apos;, Owner:User.FirstName + &apos; &apos; +  Owner:User.LastName, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Member</label>
    <type>Text</type>
</CustomField>