force-app/main/default/objects/Daily_Update__c/fields/Today__c.field-meta.xml
<CustomField>
    <fullName>Today__c</fullName>
    <label>Today</label>
    <length>255</length>
    <type>Text</type>
</CustomField>