force-app/main/default/objects/Daily_Update__c/fields/Yesterday__c.field-meta.xml
<CustomField>
    <fullName>Yesterday__c</fullName>
    <label>Yesterday</label>
    <length>255</length>
    <type>Text</type>
</CustomField>