force-app/main/default/objects/Daily_Update__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>User__c</columns>
    <columns>Expected_Billable_Hrs__c</columns>
    <columns>Yesterday__c</columns>
    <columns>Today__c</columns>
    <columns>Blockers__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>