force-app/main/default/objects/Daily_Update__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>User__c</columns>
    <columns>Expected_Billable_Hrs__c</columns>
    <columns>Yesterday__c</columns>
    <columns>Today__c</columns>
    <columns>Blockers__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>